--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -305,7 +305,7 @@
 %%% FUNCTIONS %%%
 %%%%%%%%%%%%%%%%%
 
-\newcommand{\fn}[1]{\mkfunction{fn}\parens{#1}}
+\newcommand{\fn}[1]{\mkfunction{fc}\parens{#1}}
 \newcommand{\fv}[1]{\mkfunction{fv}\parens{#1}}
 \newcommand{\bn}[1]{\mkfunction{bn}\parens{#1}}
 \newcommand{\subst}[2]{\braces{#1/#2}}
