--- a/paper/Context.tex
+++ b/paper/Context.tex
@@ -45,14 +45,14 @@
 \subsection{Context Representation}
 \label{sec:context-agda}
 
-We are going to adopt a nameless representation of channels hence typing
-contexts are represented using lists of types, where the (polymorphic)
+We are going to adopt a nameless representation of channels. Hence, typing
+contexts are represented as lists of types, where the (polymorphic)
 \AgdaDatatype{List} type and its constructors \AgdaInductiveConstructor{[]} and
 \AgdaInductiveConstructor{\_∷\_} are defined in the module
 \AgdaModule{Data.List} of Agda's standard library. We will keep using
-$\ContextC$, $\ContextD$ and $\ContextE$ to range over typing contexts as in
-\Cref{sec:typing-rules}, even though in the Agda formalisation they are lists
-instead of finite maps.
+$\ContextC$, $\ContextD$ and $\ContextE$ to range over typing contexts, even
+though in the Agda formalisation they are lists and not finite maps as in
+\Cref{sec:typing-rules}.
 
 \begin{code}%
 \>[0]\AgdaFunction{Context}\AgdaSpace{}%
@@ -161,7 +161,7 @@ left to right.
 When splitting a context $\Context$ into $\ContextD + \ContextE$, for each type
 in $\Context$ we use one of the prefix operators \AgdaInductiveConstructor{<}
 and \AgdaInductiveConstructor{>} to indicate whether the type is meant to be
-placed in $\ContextD$ or $\ContextE$.
+placed in $\ContextD$ or in $\ContextE$.
 %
 For example, below is a proof of the splitting $\Splitting{[A, B, C,
 D]}{[B]}{[A, C, D]}$.
@@ -194,9 +194,9 @@ D]}{[B]}{[A, C, D]}$.
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaInductiveConstructor{[]}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{≃}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaPostulate{B}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaInductiveConstructor{[]}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{[}}\AgdaSpace{}%
+\AgdaPostulate{B}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{]}}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{+}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaPostulate{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
@@ -691,8 +691,8 @@ conjunction} $P \sand Q$ of two predicates $P$ and $Q$ over contexts:
 \end{code}
 
 If $P$ and $Q$ are predicates over contexts, the predicate $P \sand Q$ holds for
-those contexts $\ContextC$ that can be split into $\ContextD$ and $\ContextE$
-such that $P$ holds for $\ContextD$ and $Q$ holds for $\ContextE$.
+those contexts $\ContextC$ that can be split into $\ContextD$ and $\ContextE$ so
+that $P$ holds for $\ContextD$ and $Q$ holds for $\ContextE$.
 %
 The constructor \AgdaInductiveConstructor{\_⟨\_⟩\_} has three explicit arguments
 witnessing the splitting $\Splitting\ContextC\ContextD\ContextE$ along with
@@ -778,10 +778,9 @@ and prove that \AgdaFunction{─∗} can be used to curry \AgdaDatatype{∗}:
 \end{code}
 
 To conclude the implementation of typing contexts, we define a predicate
-\AgdaDatatype{Un} that holds for \emph{unrestricted} contexts, namely those
-contexts solely made of types of the form $?A$. We will need this predicate in
-the definition of a server, which must obey the typing rule \ServerRule of
-\Cref{tab:typing-rules}.
+\AgdaDatatype{Un} that holds for \emph{unrestricted} contexts, those solely made
+of types of the form $?A$. We need this predicate in the definition of a server,
+which must comply with the typing rule \ServerRule in \Cref{tab:typing-rules}.
 
 \begin{code}%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
