--- a/paper/calculus.tex
+++ b/paper/calculus.tex
@@ -653,14 +653,13 @@ interpretation.
 \subsection{Properties of Well-Typed Processes}
 \label{sec:properties}
 
-The \emph{linearity challenge}~\citep{CarboneEtAl24} aims at formalising two
-essential properties of well-typed processes: (1) typing is preserved by
-reductions; (2) the peer endpoints of the same session are always used in
-complementary ways. This latter property is called \emph{well formedness} in the
-challenge. In this work we also consider \emph{deadlock freedom}, which is more
-general than well formedness and holds for \Calculus since its type system is
-based on linear logic. We now formulate these properties using the notation
-developed so far.
+The linearity challenge~\citep{CarboneEtAl24} aims at formalising two essential
+properties of well-typed processes: (1) typing is preserved by reductions; (2)
+the peer endpoints of the same session are always used in complementary ways.
+This latter property is called \emph{well formedness} in the challenge. In this
+work we also consider \emph{deadlock freedom}, which is more general than well
+formedness and holds for \Calculus since its type system is based on linear
+logic. We now formulate these properties using the notation developed so far.
 
 Concerning the preservation of typing, this corresponds to the usual subject
 reduction result, which is expressed thus:
