--- a/paper/related.tex
+++ b/paper/related.tex
@@ -27,7 +27,7 @@ as to enable the description of communication protocols whose structure depends
 on the content of messages.
 
 \citet{CastroFerreiraYoshida20} describe EMTST, a library for the formalisation
-of session type systems which includes as case studies the session calculus of
+of session type systems that includes as case studies the session calculus of
 \citet{HondaVasconcelosKubo98} (called ``original system'') and a revised
 version of it that is more amenable to be formalised using a locally nameless
 representation of channels.
@@ -79,6 +79,9 @@ treat typing contexts structurally and to enforce the linear usage of channels
 by checking their syntactical occurrence in processes. Interestingly, the
 approach relies on the \emph{explicit naming of continuations} so as to
 precisely account for the number of times a channel is actually used.
+\citet{SanoKavanaghPientka23} do not connect their technique with the
+continuation-passing encoding of binary sessions, but \emph{a posteriori} the
+analogies between the two approaches are evident.
 
 \citet{ZackonEtAl25} describe yet another approach to the handling of typing
 contexts whereby channels are associated not just with a type but also with a
@@ -277,7 +280,7 @@ algebra.
 \end{table}
 
 \Cref{tab:comparison} reports a summary of the aforementioned formalisations and
-our own. The three leftmost colums list the reference papers (sorted by
+also our own. The three leftmost colums list the reference papers (sorted by
 publication date), the proof assistant and the formalised calculus.
 %
 For simplicity, we have grouped the calculi into classes identified by an
@@ -304,16 +307,15 @@ approaches based directly on the linear $\pi$-calculus (into which sessions can
 be encoded) are marked with {\YES} and those based on a calculus with native
 sessions are marked with {\NO}. The calculus \SCP is marked with {\MAYBE}
 because, while not being strictly based on the linear $\pi$-calculus, it makes
-use of explicit continuations for defining the linearity predicates that check
-the linear usage of channels. Finally, all the approaches based on \GV are also
-marked with \MAYBE. In principle, \emph{none} of these calculi makes use of
-continuations. However, \GV is designed in such a way that each session
-operation acting on a channel $s$ returns the result of the operation (if any)
-\emph{along with the same channel $s$}. In this way, the type of $s$ can be
+use of explicit continuations for defining the predicates that check the linear
+usage of channels. Finally, all the approaches based on \GV are also marked with
+\MAYBE. In principle, \emph{none} of these calculi makes use of continuations.
+However, \GV is designed in such a way that each operation acting on a channel
+$s$ is a function that returns the result of the operation (if any) \emph{along
+with the same channel $s$}. In this way, the type of $s$ can be conveniently
 ``updated'' to take into account the effect of the operation. As observed by
-\citet{Padovani17}, this way of modeling the communication primitives is
-virtually indistinguishable from one making use of explicit continuation
-channels.
+\citet{Padovani17}, this semantics of the communication primitives is virtually
+indistinguishable from one making use of explicit continuation channels.
 
 The rightmost columns of \Cref{tab:comparison} report the size (in kilobytes) of
 the formalisations as rough (and possibly questionable) estimates of their
@@ -338,8 +340,8 @@ the size of the part of the development that uses it.
 In general, it is difficult to draw firm conclusions on the effectiveness of the
 various approaches in addressing the linearity challenge because the
 formalisations differ widely for a variety of entangled factors including the
-reference calculus, supported features, proof assistant,
-process/expression/channel representation, handling of linearity. Also, most
+features of calculus, the used proof assistant, the representation of
+processes/expressions/channels, the handling of linearity. Also, most
 formalisations predate the publication of the linearity
 challenge~\cite{CarboneEtAl24}, hence they are not necessarily targeted to
 solving that particular problem. However, some of
@@ -349,14 +351,14 @@ resources/channels and from context splitting in particular.
 
 Based on the available data, we can make the following observations.
 %
-The use of context splitting, which is very well represented, does not seem to
-be a good indicator of the complexity of the formalisation, since it spans the
-whole range of sizes. Our formalisation is based on context splitting and it is
-the only one that supports all the featurs of \CP, yet it is also the smallest
-one.
+The adoption of context splitting, which is very well represented, does not seem
+to be a good indicator of the complexity of the formalisation. Indeed, the
+formalisations based on context splitting span the whole range of sizes, from
+the largest by \citet{GotoEtAl16} (543kb) to our own (21kb, without the proof of
+deadlock freedom) which is also the only one supporting all the featurs of \CP.
 
-The largest formalisations~\cite{GotoEtAl16,CastroFerreiraYoshida20} are also
-the ones that adopt a locally nameless representation of channels. In these
+The two largest formalisations~\cite{GotoEtAl16,CastroFerreiraYoshida20} are the
+ones that adopt a locally nameless representation of channels. In these
 formalisations channels are represented in two different ways, depending on
 whether they are free or bound. This necessarily entails some duplication of
 effort as well as some transformation machinery between the two representations
@@ -366,7 +368,7 @@ Other channel representations are not strong complexity indicators. Note that
 the adoption of co-de Bruijn syntax implies the use of context splitting, hence
 the two aspects are not completely independent.
 
-There is no strong evidence that the intrinsically typed representation of
+We found no strong evidence that the intrinsically typed representation of
 processes reduces the size of the formalisation. As observed in
 \Cref{sec:process-agda}, this choice may help reducing the overall number of
 datatypes to be defined, but the definitions are also more involved because they
@@ -374,7 +376,7 @@ incorporate invariants and the proofs of typing preservation. In the end, it
 seems plausible to speculate that the effort for representing processes, types
 and typing rules is not substantially different overall.
 
-Finally, it seems that the use of (explicit) continuations helps taming the
+Finally, it seems that the use of (explicit) continuations affects the
 complexity of the formalisation more than anything else. Indeed, the six
 smallest formalisations (excluding the deadlock freedom results) -- with an
 average size of around 62kb -- are all based on continuations, whether they are
